--- a/Oslo Model/Oslo Model/Oslo Model.vcxproj.filters
+++ b/Oslo Model/Oslo Model/Oslo Model.vcxproj.filters
@@ -18,5 +18,21 @@
     <ClCompile Include="Oslo Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="slopefunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="slopefunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Oslo Model.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
